docs/upbound-provider-gcp/0.29/compute/v1beta1/index.md
---
permalink: /upbound-provider-gcp/0.29/compute/v1beta1/
---

# compute.v1beta1



* [address](address.md)
* [attachedDisk](attachedDisk.md)
* [autoscaler](autoscaler.md)
* [backendBucket](backendBucket.md)
* [backendBucketSignedURLKey](backendBucketSignedURLKey.md)
* [backendService](backendService.md)
* [backendServiceSignedURLKey](backendServiceSignedURLKey.md)
* [disk](disk.md)
* [diskIAMMember](diskIAMMember.md)
* [diskResourcePolicyAttachment](diskResourcePolicyAttachment.md)
* [externalVPNGateway](externalVPNGateway.md)
* [firewall](firewall.md)
* [firewallPolicy](firewallPolicy.md)
* [firewallPolicyAssociation](firewallPolicyAssociation.md)
* [firewallPolicyRule](firewallPolicyRule.md)
* [forwardingRule](forwardingRule.md)
* [globalAddress](globalAddress.md)
* [globalForwardingRule](globalForwardingRule.md)
* [globalNetworkEndpoint](globalNetworkEndpoint.md)
* [globalNetworkEndpointGroup](globalNetworkEndpointGroup.md)
* [haVPNGateway](haVPNGateway.md)
* [healthCheck](healthCheck.md)
* [httpHealthCheck](httpHealthCheck.md)
* [httpsHealthCheck](httpsHealthCheck.md)
* [image](image.md)
* [imageIAMMember](imageIAMMember.md)
* [instance](instance.md)
* [instanceFromTemplate](instanceFromTemplate.md)
* [instanceGroup](instanceGroup.md)
* [instanceGroupManager](instanceGroupManager.md)
* [instanceGroupNamedPort](instanceGroupNamedPort.md)
* [instanceIAMMember](instanceIAMMember.md)
* [instanceTemplate](instanceTemplate.md)
* [interconnectAttachment](interconnectAttachment.md)
* [managedSSLCertificate](managedSSLCertificate.md)
* [network](network.md)
* [networkEndpoint](networkEndpoint.md)
* [networkEndpointGroup](networkEndpointGroup.md)
* [networkFirewallPolicy](networkFirewallPolicy.md)
* [networkFirewallPolicyAssociation](networkFirewallPolicyAssociation.md)
* [networkPeering](networkPeering.md)
* [networkPeeringRoutesConfig](networkPeeringRoutesConfig.md)
* [nodeGroup](nodeGroup.md)
* [nodeTemplate](nodeTemplate.md)
* [packetMirroring](packetMirroring.md)
* [perInstanceConfig](perInstanceConfig.md)
* [projectDefaultNetworkTier](projectDefaultNetworkTier.md)
* [projectMetadata](projectMetadata.md)
* [projectMetadataItem](projectMetadataItem.md)
* [regionAutoscaler](regionAutoscaler.md)
* [regionBackendService](regionBackendService.md)
* [regionDisk](regionDisk.md)
* [regionDiskIAMMember](regionDiskIAMMember.md)
* [regionDiskResourcePolicyAttachment](regionDiskResourcePolicyAttachment.md)
* [regionHealthCheck](regionHealthCheck.md)
* [regionInstanceGroupManager](regionInstanceGroupManager.md)
* [regionNetworkEndpointGroup](regionNetworkEndpointGroup.md)
* [regionNetworkFirewallPolicy](regionNetworkFirewallPolicy.md)
* [regionNetworkFirewallPolicyAssociation](regionNetworkFirewallPolicyAssociation.md)
* [regionPerInstanceConfig](regionPerInstanceConfig.md)
* [regionSSLCertificate](regionSSLCertificate.md)
* [regionTargetHTTPProxy](regionTargetHTTPProxy.md)
* [regionTargetHTTPSProxy](regionTargetHTTPSProxy.md)
* [regionURLMap](regionURLMap.md)
* [reservation](reservation.md)
* [resourcePolicy](resourcePolicy.md)
* [route](route.md)
* [router](router.md)
* [routerInterface](routerInterface.md)
* [routerNAT](routerNAT.md)
* [securityPolicy](securityPolicy.md)
* [serviceAttachment](serviceAttachment.md)
* [snapshot](snapshot.md)
* [snapshotIAMMember](snapshotIAMMember.md)
* [sslCertificate](sslCertificate.md)
* [sslPolicy](sslPolicy.md)
* [subnetwork](subnetwork.md)
* [subnetworkIAMMember](subnetworkIAMMember.md)
* [targetGRPCProxy](targetGRPCProxy.md)
* [targetHTTPProxy](targetHTTPProxy.md)
* [targetHTTPSProxy](targetHTTPSProxy.md)
* [targetInstance](targetInstance.md)
* [targetPool](targetPool.md)
* [targetSSLProxy](targetSSLProxy.md)
* [targetTCPProxy](targetTCPProxy.md)
* [urlMap](urlMap.md)
* [vpnGateway](vpnGateway.md)
* [vpnTunnel](vpnTunnel.md)